Update UserManual.md
- Updated the details on how to launch the program
- Added examples describing how to interpret the displayed board